--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 colorama==0.4.1
 dj-database-url==0.5.0
 Django==3.0.5
+djangorestframework==3.11.0
 django-crispy-forms==1.7.2
 django-heroku==0.3.1
 gunicorn==19.9.0
@@ -27,7 +28,7 @@ pytz==2019.2
 requests==2.22.0
 rfc3986==1.3.2
 six==1.12.0
-sqlparse==0.3.0
+sqlparse==0.3.1
 typed-ast==1.4.0
 urllib3==1.25.3
 whitenoise==4.1.3
