--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.2.7
 astroid==2.2.5
 async-timeout==3.0.1
 attrs==19.1.0
@@ -6,9 +7,9 @@ chardet==3.0.4
 colorama==0.4.1
 dj-database-url==0.5.0
 Django==3.0.5
-djangorestframework==3.11.0
 django-crispy-forms==1.7.2
 django-heroku==0.3.1
+djangorestframework==3.11.0
 gunicorn==19.9.0
 h11==0.8.1
 h2==3.1.1
@@ -21,6 +22,7 @@ lazy-object-proxy==1.4.2
 mccabe==0.6.1
 multidict==4.5.2
 psycopg2==2.8.5
+psycopg2-binary==2.8.5
 pylint==2.3.1
 pylint-django==2.0.11
 pylint-plugin-utils==0.5
