--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pylint-plugin-utils==0.5
 pytz==2019.2
 requests==2.22.0
 rfc3986==1.3.2
+scikit-learn==0.21.1
 six==1.12.0
 sqlparse==0.3.1
 typed-ast==1.4.0
