--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 colorama==0.4.1
 dj-database-url==0.5.0
 Django==3.0.5
+django-cors-headers==3.3.0
 django-crispy-forms==1.7.2
 django-heroku==0.3.1
 djangorestframework==3.11.0
