--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ mccabe==0.6.1
 multidict==4.5.2
 pandas==1.0.3
 pickleshare==0.7.5
+Pillow==7.1.2
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pylint==2.3.1
